--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <br>
              <span>
                <a href="https://endyends.bigcartel.com" class="button">Shop Now</a>
-               <a href="/products" class="button">Tour Dates</a>
+               <a href="#" class="button">Tour Dates</a>
              </span>
          </article>
       </section>
