--- a/index.html
+++ b/index.html
@@ -1,89 +1,85 @@
-<html class="no-js" lang="en">
-   <head>
-      <meta charset="utf-8">
-      <title>EndyEnds</title>
-      <meta name="description" content="">
-      <meta name="keywords" content="EndyEnds, Endy, LilEnds">
-      <meta name="author" content="Peter Soboyejo">
-      <!-- CSS Code -->
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/reset.css">
-      <!-- JS Code -->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/script.js"></script>
+<!doctype html>
+<html lang="en"><head>
 
-      <script>
-         $(function() {
-           $('a[href*=#]:not([href=#])').click(function() {
-             if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+	<link rel="icon" href="imgs/alerts.png" type="image/x-icon">
+	<link rel="shortcut icon" href="imgs/alerts.png" type="image/x-icon">
 
-               var target = $(this.hash);
-               target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-               if (target.length) {
-                 $('html,body').animate({
-                   scrollTop: target.offset().top
-                 }, 1000);
-                 return false;
-               }
-             }
-           });
-         });
-      </script>
-      <script type="text/javascript">
-         function rollover() {
-           if (!document.getElementById) return
-           var imgOrSrc;
-           var imgPreload = new Array();
-           var images = document.getElementsByTagName('img');
-           for (var i = 0; i < images.length; i++) {
-             if (images[i].getAttribute('rsrc')) {
-               imgPreload[i] = new Image();
-               imgPreload[i].src = images[i].getAttribute('rsrc');
-               images[i].onmouseover = function() {
-                 imgOrSrc = this.getAttribute('src');
-                 this.setAttribute('src',this.getAttribute('rsrc'))
-               }
-               images[i].onmouseout = function() {
-                 this.setAttribute('src',imgOrSrc)
-               }
-             }
-           }
-         }
-      </script>
-   </head>
-   <body style="background-color:f0f0f0" onload="rollover()">
-      <!-- Section #1 -->
-      <section id="home" data-speed="10" data-type="background" style="background-position: 50% 0px;">
-         <article><img src="imgs/logo.png">
-           <br>
-             <a href="http://endyends.tumblr.com "><img src="imgs/tumblr.png" rsrc="imgs/tumblr.png"></a>
-             <a href="https://instagram.com/endyends"><img src="imgs/instagram.png" rsrc="imgs/instagram.png"></a>
-             <a href="https://twitter.com/lilends"><img src="imgs/twitter.png" rsrc="imgs/twitter.png"></a>
-             <a href="https://soundcloud.com/endyends"><img src="imgs/sc.png" rsrc="imgs/sc.png"></a>
-             <a href="https://soundcloud.com/endyends"><img src="imgs/bc.png" rsrc="imgs/bc.png"></a>
-            <br>
-             <span>
-               <a href="https://endyends.bigcartel.com" class="button">Shop Now</a>
-               <a href="#" class="button">Tour Dates</a>
-             </span>
-         </article>
-      </section>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <section id="middle" data-speed="10" data-type="background" style="background-position: 50%">
-          <article>
-            <div style="float: left; max-width: 0%;">
-              <iframe width="853" height="480" src="https://www.youtube.com/embed/Q5tuZjYP59A?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div style="float: right; max-width: 0%;">
-              <h2>Watch more videos.</h2>
-                <a href="http://youtube.com/" class="button">Visit YouTube</a>
-                <br><br>
-                  <a href="https://endyends.bandcamp.com/album/necromancer-endy"><img src="https://f4.bcbits.com/img/a1831088841_7.jpg" title="Necromancer Endy"></img></a>
-                  <a href="https://endyends.bandcamp.com/album/melloends-2"><img src="https://f4.bcbits.com/img/a1252092857_7.jpg" title="MelloEnds 2"></img></a>
-                  <a href="https://endyends.bandcamp.com/album/holographic-endy"><img src="https://f4.bcbits.com/img/a2939698270_7.jpg" title="Holographic Endy"></img></a>
-            </div>
-          </article>
-        </section>
+	<title>EndyEnds</title>
 
-   </body>
-</html>
+	<link href="http://fonts.googleapis.com/css?family=Roboto:400,100,300" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+
+	<div class="container">
+		<header>
+			<a href="/"> <img class="logo" alt="Logo" src="img/logo.png"> </a>
+			<br>
+			<br>
+				<a href="http://endyends.tumblr.com "><img src="img/tumblr.png" rsrc="imgs/tumblr.png"></a>
+				<a href="https://instagram.com/endyends"><img src="img/instagram.png" rsrc="imgs/instagram.png"></a>
+				<a href="https://twitter.com/lilends"><img src="img/twitter.png" rsrc="imgs/twitter.png"></a>
+				<a href="https://soundcloud.com/endyends"><img src="img/sc.png" rsrc="imgs/sc.png"></a>
+				<a href="https://soundcloud.com/endyends"><img src="img/bc.png" rsrc="imgs/bc.png"></a>
+			<br><br>
+
+			<span>
+				<a href="https://endyends.bigcartel.com" class="button">Shop Now</a>
+				<a href="#tour" class="button">Tour Dates</a>
+			</span><br><br>
+
+
+		</header>
+
+		<br><br>
+		<center>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/Q5tuZjYP59A?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		</center>
+
+		<div class="ribbon">
+			<div class="caption full">
+			</div>
+			<center><a href="#" class="blackbutton">Check Out More</a></center>
+		</div>
+		<hr>
+
+		<div class="ribbon privacy">
+				<h2> Music </h2>
+				<center>
+					<a href="https://endyends.bandcamp.com/album/necromancer-endy"><img src="https://f4.bcbits.com/img/a1831088841_7.jpg" title="Necromancer Endy"></img></a>
+					<a href="https://endyends.bandcamp.com/album/melloends-2"><img src="https://f4.bcbits.com/img/a1252092857_7.jpg" title="MelloEnds 2"></img></a>
+					<a href="https://endyends.bandcamp.com/album/holographic-endy"><img src="https://f4.bcbits.com/img/a2939698270_7.jpg" title="Holographic Endy"></img></a>
+					<br><br>
+					<center><a href="http://endyends.bandcamp.com" class="blackbutton">Find more on Bandcamp</a></center>
+				</center>
+		</div>
+
+		<hr>
+	<section id="tour">
+		<div class="ribbon privacy">
+				<h2> Tour Dates </h2>
+
+				<center>
+					<p>
+					Nothing yet.
+					</p>
+					<p> Last Updated: Jun 18, 2016 </p>
+				</center>
+		</div>
+	</section>
+
+
+		<hr class="extra-padding">
+		<footer>
+		© 2016 <a href="#"> EndyEnds </a>
+		</footer>
+
+	</div>
+
+
+</body></html>
