--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
 		<hr>
 	<section id="tour">
-		<div class="ribbon privacy">
-			<h2> Press Kit </h2>
+		<div class="ribbon privacy" style="text-position: center;">
+			<h2> Tour Dates </h2>
 	
 			<h3>Friday - July, 15 2016</h3>
 			<p>Doors Open at 8PM show starts at 9PM, $15 at the door.</p>
 	
-			<a href="https://goo.gl/maps/JX6L5xE9kBJ2"></a><p>1612 7th St, Oakland, CA 94607</p></a>
+			<a href="https://goo.gl/maps/JX6L5xE9kBJ2"><p>1612 7th St, Oakland, CA 94607</p></a>
 		</div>
 	</section>
 
