--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 			<a href="/"> <img class="logo" alt="Logo" src="img/logo.png"> </a>
 			<br>
 			<br>
-				<a href="http://endyends.tumblr.com "><img src="img/tumblr.png" rsrc="imgs/tumblr.png"></a>
-				<a href="https://instagram.com/endyends"><img src="img/instagram.png" rsrc="imgs/instagram.png"></a>
 				<a href="https://twitter.com/lilends"><img src="img/twitter.png" rsrc="imgs/twitter.png"></a>
 				<a href="https://soundcloud.com/endyends"><img src="img/sc.png" rsrc="imgs/sc.png"></a>
 				<a href="https://soundcloud.com/endyends"><img src="img/bc.png" rsrc="imgs/bc.png"></a>
@@ -49,9 +47,9 @@
 		<div class="ribbon privacy">
 				<h2> Music </h2>
 				<center>
-					<a href="https://endyends.bandcamp.com/album/necromancer-endy"><img src="https://f4.bcbits.com/img/a1831088841_7.jpg" title="Necromancer Endy"></img></a>
-					<a href="https://endyends.bandcamp.com/album/melloends-2"><img src="https://f4.bcbits.com/img/a1252092857_7.jpg" title="MelloEnds 2"></img></a>
-					<a href="https://endyends.bandcamp.com/album/holographic-endy"><img src="https://f4.bcbits.com/img/a2939698270_7.jpg" title="Holographic Endy"></img></a>
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/187714795&amp;color=946ee8&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+					
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/170977427&amp;color=946ee8&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 					<br><br>
 					<center><a href="http://endyends.bandcamp.com" class="blackbutton">Find more on Bandcamp</a></center>
 				</center>
