--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 				<h3>Friday - July, 15 2016</h3>
 				<p>Doors Open at 8PM show starts at 9PM, $15 at the door.</p>
 				<a href="https://goo.gl/maps/JX6L5xE9kBJ2"><p>1612 7th St, Oakland, CA 94607</p></a>
+				
+				<img src="img/flyer.jpg" width="60%" height="60%"></img>
+				
 			</center>
 		</div>
 	</section>
