--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<br><br>
 		<center>
-			<iframe width="371" height="315" src="https://www.youtube.com/embed/Q5tuZjYP59A?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+			<iframe width="371" height="315" src="https://www.youtube.com/embed/DdSHl8IICdI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 		</center>
 
 		<div class="ribbon">
@@ -60,11 +60,7 @@
 		<div class="ribbon privacy">
 			<center>
 				<h2> Tour Dates </h2>
-				<h3>Friday - July, 15 2016</h3>
-				<p>Doors Open at 8PM show starts at 9PM, $15 at the door.</p>
-				<a href="https://goo.gl/maps/JX6L5xE9kBJ2"><p>1612 7th St, Oakland, CA 94607</p></a>
-				
-				<img src="img/flyer.jpg" width="60%" height="60%"></img>
+				<h3>No Upcoming Shows</h3>
 				
 			</center>
 		</div>
